clusters/home/flux-system/capacitor-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  namespace: flux-system
spec:
  template:
    spec:
      containers:
        - name: capacitor
          readinessProbe: null
