clusters/home/flux-system/flux-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: source-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: source-controller
spec:
  selector:
    app.kubernetes.io/name: source-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kustomize-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: kustomize-controller
spec:
  selector:
    app.kubernetes.io/name: kustomize-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helm-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: helm-controller
spec:
  selector:
    app.kubernetes.io/name: helm-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: notification-controller
spec:
  selector:
    app.kubernetes.io/name: notification-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: image-reflector-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: image-reflector-controller
spec:
  selector:
    app.kubernetes.io/name: image-reflector-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: image-automation-controller
  namespace: flux-system
  labels:
    app.kubernetes.io/name: image-automation-controller
spec:
  selector:
    app.kubernetes.io/name: image-automation-controller
  ports:
    - name: http
      port: 80
      targetPort: 8080
