clusters/home/flux-system/capacitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            nginx: "enabled"
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/name: "Capacitor"
    hajimari.io/icon: "mdi:react"
    hajimari.io/url: "https://flux.homelab/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - flux.homelab
      secretName: wildcard-homelab-tls
  rules:
    - host: flux.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
